endpoint for registration + external service use case
