# api/v1alpha1/openapi.yaml
@@ -21,7 +21,38 @@ paths:
         '200':
           description: OK
 
-  /vm/providers:
+  /provider/registration:
+    post:
+      summary: Register VM Service Providers
+      operationId: CreateVMProvider
+      description: Register Virtual Machine Service Providers
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VMProvider'
+      responses:
+        '201':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VMProvider'
+        '400':
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /providers:
     get:
       summary: Get all providers
       operationId: ListVMProviders
@@ -46,7 +77,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /vm/providers/{provider-id}:
+  /providers/{provider-id}:
     get:
       summary: Get a provider
       operationId: GetVMProvider
@@ -78,10 +109,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /vm/provider/{provider-id}/application:
+  /provider/{provider-id}/application:
     post:
       summary: Create a VM
-      operationId: createVM
+      operationId: CreateVM
       description: Create an application based on service provider
       parameters:
         - name: provider-id
@@ -117,7 +148,7 @@ paths:
                 $ref: '#/components/schemas/Error'
     delete:
       summary: Delete an application
-      operationId: deleteVM
+      operationId: DeleteVM
       description: Delete a DCM application based on unique ID
       parameters:
         - name: appID
@@ -154,7 +185,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-
 components:
   schemas:
     VMProvider:
@@ -165,6 +195,7 @@ components:
         - id
         - type
         - description
+        - endpoint
       properties:
         id:
           type: string
@@ -174,6 +205,10 @@ components:
           type: string
           description: Name of the Service Provider
           example: "kubevirt"
+        endpoint:
+          type: string
+          description: API of the Service Provider
+          example: "http://localhost:8080"
         type:
           type: string
           description: Type of the Service Provider
