# internal/handlers/v1alpha1/handler.go
@@ -23,28 +23,57 @@ func (s *ServiceHandler) ListHealth(ctx context.Context, request server.ListHeal
 	return server.ListHealth200Response{}, nil
 }
 
-// ListVMProviders ListProviders (GET /vm/providers)
+// CreateVMProvider (POST /provider/registration)
+func (s *ServiceHandler) CreateVMProvider(ctx context.Context, request server.CreateVMProviderRequestObject) (server.CreateVMProviderResponseObject, error) {
+	logger := zap.S().Named("handler")
+	logger.Info("Registering VM service provider")
+
+	newProvider := request.Body
+	err := s.vmService.RegisterProvider(ctx, newProvider)
+	if err != nil {
+		return nil, err
+	}
+
+	return server.CreateVMProvider201JSONResponse{
+		Description: newProvider.Description,
+		Endpoint:    newProvider.Endpoint,
+		Id:          newProvider.Id,
+		Name:        newProvider.Name,
+		Type:        newProvider.Type,
+	}, nil
+}
+
+// ListVMProviders ListProviders (GET /providers)
 func (s *ServiceHandler) ListVMProviders(ctx context.Context, request server.ListVMProvidersRequestObject) (server.ListVMProvidersResponseObject, error) {
-	logger := zap.S().Named("service-provider")
+	logger := zap.S().Named("handler")
 	logger.Info("Listing vm service providers... ")
-	providers := s.vmService.GetVMProviders(ctx)
+	providers, err := s.vmService.ListProvider(ctx)
+	if err != nil {
+		return nil, err
+	}
 	return server.ListVMProviders200JSONResponse{
 		Providers: providers,
 	}, nil
 }
 
-// GetVMProvider GetProvider (GET /vm/provider/{provider-id})
+// GetVMProvider GetProvider (GET /provider/{provider-id})
 func (s *ServiceHandler) GetVMProvider(ctx context.Context, request server.GetVMProviderRequestObject) (server.GetVMProviderResponseObject, error) {
 	logger := zap.S().Named("service-provider")
 	logger.Info("Retrieving provider: ", "ID: ", request.ProviderId)
-	providerInfo, err := s.vmService.GetVMProvider(request.ProviderId.String())
+	providerInfo, err := s.vmService.GetProvider(ctx, request.ProviderId.String())
 	if err != nil {
-		return server.GetVMProvider400JSONResponse{}, nil
+		return server.GetVMProvider400JSONResponse{}, err
 	}
-	return providerInfo, nil
+	return server.GetVMProvider200JSONResponse{
+		Description: providerInfo.Description,
+		Endpoint:    providerInfo.Endpoint,
+		Id:          providerInfo.ProviderID,
+		Name:        providerInfo.Name,
+		Type:        providerInfo.Type,
+	}, nil
 }
 
-// CreateVM (POST /vm/provider/{provider-id}/application
+// CreateVM (POST /provider/{provider-id}/application
 func (s *ServiceHandler) CreateVM(ctx context.Context, request server.CreateVMRequestObject) (server.CreateVMResponseObject, error) {
 	logger := zap.S().Named("service-provider")
 	logger.Info("Creating VM. ", "VM: ", request)
@@ -57,7 +86,7 @@ func (s *ServiceHandler) CreateVM(ctx context.Context, request server.CreateVMRe
 	return server.CreateVM201JSONResponse{Id: &vm.ID, Name: &vm.RequestInfo.VMName, Namespace: &vm.RequestInfo.Namespace}, nil
 }
 
-// DeleteVM (DELETE /vm/provider/{provider-id})/application
+// DeleteVM (DELETE /provider/{provider-id})/application
 func (s *ServiceHandler) DeleteVM(ctx context.Context, request server.DeleteVMRequestObject) (server.DeleteVMResponseObject, error) {
 	logger := zap.S().Named("service-provider")
 	logger.Info("Deleting Application. ", "VM: ", request)
